; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cpu.c_CPU_StateSave.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cpu.c_CPU_StateSave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPU_regA = common dso_local global i32 0, align 4
@CPU_regP = common dso_local global i32 0, align 4
@CPU_regS = common dso_local global i32 0, align 4
@CPU_regX = common dso_local global i32 0, align 4
@CPU_regY = common dso_local global i32 0, align 4
@CPU_IRQ = common dso_local global i32 0, align 4
@CPU_regPC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CPU_StateSave(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 @StateSav_SaveUBYTE(i32* @CPU_regA, i32 1)
  %4 = call i32 (...) @CPU_GetStatus()
  %5 = call i32 @StateSav_SaveUBYTE(i32* @CPU_regP, i32 1)
  %6 = call i32 @StateSav_SaveUBYTE(i32* @CPU_regS, i32 1)
  %7 = call i32 @StateSav_SaveUBYTE(i32* @CPU_regX, i32 1)
  %8 = call i32 @StateSav_SaveUBYTE(i32* @CPU_regY, i32 1)
  %9 = call i32 @StateSav_SaveUBYTE(i32* @CPU_IRQ, i32 1)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @MEMORY_StateSave(i32 %10)
  %12 = call i32 @StateSav_SaveUWORD(i32* @CPU_regPC, i32 1)
  ret void
}

declare dso_local i32 @StateSav_SaveUBYTE(i32*, i32) #1

declare dso_local i32 @CPU_GetStatus(...) #1

declare dso_local i32 @MEMORY_StateSave(i32) #1

declare dso_local i32 @StateSav_SaveUWORD(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
